--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>git-3</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, vero!</p>
 </body>
 </html>
